--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Esto es Peñarol
+title: "Esto es Peñarol"
 author: Juan Izquierdo
 email: jpizquierdo19@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
